--- a/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
+++ b/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>CrossoutLogView.Common</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
