New Logging - Better Exception handling - Miscellaneous code refactoring

--- a/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
+++ b/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>CrossoutLogView.Common</RootNamespace>
+    <Platforms>AnyCPU;x86;x64</Platforms>
+    <Configurations>Debug;Release;Release x86;Debug x86</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
