--- a/CrossoutLogViewer.Log/CrossoutLogViewer.Log.csproj
+++ b/CrossoutLogViewer.Log/CrossoutLogViewer.Log.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>CrossoutLogView.Log</RootNamespace>
+    <Platforms>AnyCPU;x86;x64</Platforms>
+    <Configurations>Debug;Release;Release x86;Debug x86</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
