--- a/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
+++ b/CrossoutLogViewer.Common/CrossoutLogViewer.Common.csproj
@@ -3,8 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>CrossoutLogView.Common</RootNamespace>
-    <Platforms>AnyCPU;x86;x64</Platforms>
-    <Configurations>Debug;Release;Release x86;Debug x86</Configurations>
+    <Platforms>AnyCPU</Platforms>
+    <Configurations>Debug;Release</Configurations>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
