--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /Crossout-Log-Viewer_Setup.exe
+/Crossout-Log-Viewer_Executable.7z
