--- a/CrossoutLogViewer.Statistics/CrossoutLogViewer.Statistics.csproj
+++ b/CrossoutLogViewer.Statistics/CrossoutLogViewer.Statistics.csproj
@@ -7,6 +7,11 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AssemblyVersion>0.1.4.0</AssemblyVersion>
+    <Version>0.1.4.0</Version>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DocumentationFile></DocumentationFile>
