--- a/CrossoutLogViewer.Updater/CrossoutLogViewer.Updater.csproj
+++ b/CrossoutLogViewer.Updater/CrossoutLogViewer.Updater.csproj
@@ -7,6 +7,11 @@
     <StartupObject>CrossoutLogView.Updater.Program</StartupObject>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AssemblyVersion>0.1.4.0</AssemblyVersion>
+    <Version>0.1.4.0</Version>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
