--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,5 @@ ASALocalRun/
 healthchecksdb
 /Crossout-Log-Viewer_Setup.exe
 /Crossout-Log-Viewer_Executable.7z
+/SocialPreview.png
+/Crossout-Log-Viewer_Executable.zip
